Add to Array-Form of Integer